--- a/client/src/pages/resources/resources.css
+++ b/client/src/pages/resources/resources.css
@@ -47,8 +47,8 @@
 	text-decoration: none;
 	border: 0;
 }
-.resources-tabs button:hover{
-	color: #2A2C2E;
+.resources-tabs button:hover {
+	color: #2a2c2e;
 	background-color: #ff9617;
 }
 
