--- a/client/src/components/events/event-expand/event-content.css
+++ b/client/src/components/events/event-expand/event-content.css
@@ -1,6 +1,6 @@
 .event-expand {
 	display: flex;
-	background-color: #3D3F43;
+	background-color: #3d3f43;
 	border-radius: 10px;
 	display: flex;
 	max-height: 800px;
