--- a/client/src/pages/manager/login/login.css
+++ b/client/src/pages/manager/login/login.css
@@ -15,17 +15,17 @@
 }
 
 .login-input {
-	@apply w-[300px] my-4 py-2 px-4 rounded-2xl border-2 outline-none text-white duration-300 border-orange-400 bg-[#161b22] focus:border-white focus:outline-none;
+	@apply w-[300px] my-4 py-2 px-4 rounded-2xl border-2 outline-none text-white duration-300 border-orange bg-[#161b22] focus:border-white focus:outline-none;
 }
 
 .login-button {
-	@apply w-40 h-10 my-4 text-lg font-semibold rounded-2xl border-2 duration-300 border-orange-400 text-white bg-[#161b22] hover:text-black hover:bg-orange-400;
+	@apply w-40 h-10 my-4 text-lg font-semibold rounded-2xl border-2 duration-300 border-orange text-white bg-[#161b22] hover:text-black hover:bg-orange;
 }
 
 .login-link {
-	@apply text-orange-400 hover:underline;
+	@apply text-orange hover:underline;
 }
 
 .login-text {
-	@apply text-gray-400;
+	@apply text-gray;
 }
