--- a/client/src/components/resources/resources.css
+++ b/client/src/components/resources/resources.css
@@ -122,8 +122,9 @@
 	color: white;
 	border-bottom: 2px solid #ff9617 !important;
 	background-color: transparent !important;
-	font-size: min(4vw, 1.3rem);
+	font-size: 1.5rem !important;
 	font-family: serif;
+	font-weight: bold;
 	transition: all 300ms;
 }
 
@@ -195,12 +196,12 @@ a.resource-link {
 	margin-right: 10px;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	padding: 0px 5px;
+	padding: 2px 8px;
 	font-size: 16px;
 	cursor: pointer;
 	color: white;
 	width: fit-content;
 	text-align: center;
 	border: 1.5px solid #2196f3;
-	border-radius: 2px;
+	border-radius: 5px;
 }
